fix: content and filter overlapping

--- a/css/product.css
+++ b/css/product.css
@@ -73,6 +73,7 @@
 
 .main-content {
   flex-grow: 1;
+  padding-bottom: 8rem;
 }
 
 @media screen and (min-width: 600px) {
